--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
+    "msw": "^2.12.8",
     "orval": "^7.13.2",
     "prettier": "^3.8.1",
     "tw-animate-css": "^1.4.0",
@@ -56,5 +57,10 @@
     "typescript-eslint": "^8.54.0",
     "vite": "^7.2.4",
     "vite-tsconfig-paths": "^6.0.5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
