přidání další github action

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,24 +1,12 @@
-name: Verify
+name: Run verify on PR
 
 on:
     pull_request:
+        branches:
+            - "**"
 
 jobs:
     verify:
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-
-            - name: Use Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 20
-                  cache: "npm"
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Run verify
-              run: npm run verify
+        uses: ./.github/workflows/workflow.verify.yml
+    hello:
+        uses: ./.github/workflows/workflow.hello.yml
