--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "generate:api": "orval",
         "prepare": "husky",
         "tsc": "tsc --noEmit",
-        "verify": "npm run tsc && npm run lint"
+        "verify": "npm run tsc && npm run lint",
+        "test": "vitest run"
     },
     "dependencies": {
         "@hookform/resolvers": "^5.2.2",
@@ -23,6 +24,13 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@tailwindcss/vite": "^4.1.18",
         "@tanstack/react-query": "^5.90.20",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.5.0",
+        "@testing-library/react": "^16.0.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@vitejs/plugin-react": "^4.3.2",
+        "@vitest/coverage-v8": "^3.0.8",
+        "@vitest/ui": "^3.0.8",
         "axios": "^1.13.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -36,6 +44,8 @@
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.18",
+        "vite-tsconfig-paths": "^5.0.1",
+        "vitest": "^3.2.3",
         "zod": "^4.3.6"
     },
     "devDependencies": {
@@ -49,6 +59,7 @@
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
+        "happy-dom": "^20.6.3",
         "husky": "^9.1.7",
         "jiti": "^2.6.1",
         "msw": "^2.12.8",
